@@ -3,23 +3,24 @@
 pkgdatadir = $(datadir)/@PACKAGE@/ReportBase
 
 pkgdata_PYTHON = \
+	__init__.py\
 	_BareReportDialog.py\
 	_Bibliography.py\
 	_BookFormatComboBox.py\
 	_CommandLineReport.py\
 	_Constants.py\
+	_DocReportDialog.py\
 	_DrawFormatComboBox.py\
 	_DrawReportDialog.py\
 	_Endnotes.py\
 	_FileEntry.py\
 	_GraphvizReportDialog.py\
-	__init__.py\
 	_PaperMenu.py\
 	_PrintTools.py\
-	_ReportDialog.py\
-	_ReportUtils.py\
-	_ReportOptions.py\
 	_Report.py\
+	_ReportDialog.py\
+	_ReportOptions.py\
+	_ReportUtils.py\
 	_StyleComboBox.py\
 	_StyleEditor.py\
 	_TemplateParser.py\
